// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders a loader 1`] = `
@keyframes animation-0 {
  0%, 6% {
    -webkit-clip-path: polygon(0% -12%, 0% -12%, 169% 65.5%, 169% 65.5%);
    clip-path: polygon(0% -12%, 0% -12%, 169% 65.5%, 169% 65.5%);
  }

  100% {
    -webkit-clip-path: polygon(0% -12%, 0% 308%, 169% 383%, 169% 65.5%);
    clip-path: polygon(0% -12%, 0% 308%, 169% 383%, 169% 65.5%);
  }
}

@keyframes animation-1 {
  0%, 71% {
    -webkit-clip-path: polygon(0% 0%, 0% 78.5%, 100% 34.5%, 100% -30%);
    clip-path: polygon(0% 0%, 0% 78.5%, 100% 34.5%, 100% -30%);
  }

  96%, 100% {
    -webkit-clip-path: polygon(0% 0%, 0% 140%, 100% 96%, 100% -30%);
    clip-path: polygon(0% 0%, 0% 140%, 100% 96%, 100% -30%);
  }
}

@keyframes animation-2 {
  100% {
    stroke-dashoffset: 0;
  }
}

.emotion-0 {
  -webkit-animation: animation-0 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  animation: animation-0 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  will-change: clip-path;
}

.emotion-1 {
  -webkit-clip-path: polygon(-0.1% -10%, 169% 65%, -0.1% 139%);
  clip-path: polygon(-0.1% -10%, 169% 65%, -0.1% 139%);
  -webkit-animation: animation-1 cubic-bezier(0, 0, 0.85, 1) 2s infinite alternate;
  animation: animation-1 cubic-bezier(0, 0, 0.85, 1) 2s infinite alternate;
  will-change: clip-path;
}

.emotion-2 {
  display: block;
  stroke: #000820;
}

.emotion-3 {
  -webkit-animation: animation-2 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  animation: animation-2 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  stroke-dasharray: 9800;
  stroke-dashoffset: 9800;
  will-change: stroke-dashoffset;
}

<div
  class="emotion-0"
  data-testid="loader-wrapper"
>
  <div
    class="emotion-1"
  >
    <svg
      class="emotion-2"
      viewBox="0 0 2640 3444"
    >
      <path
        class="emotion-3"
        d="M0 0 M2569 1056L143 2447V149l1175 673v1867l1248 715"
        fill="none"
        stroke-linejoin="round"
        stroke-width="300"
      />
    </svg>
  </div>
</div>
`;

exports[`Loader renders snapshot of inverted 1`] = `
@keyframes animation-0 {
  0%, 6% {
    -webkit-clip-path: polygon(0% -12%, 0% -12%, 169% 65.5%, 169% 65.5%);
    clip-path: polygon(0% -12%, 0% -12%, 169% 65.5%, 169% 65.5%);
  }

  100% {
    -webkit-clip-path: polygon(0% -12%, 0% 308%, 169% 383%, 169% 65.5%);
    clip-path: polygon(0% -12%, 0% 308%, 169% 383%, 169% 65.5%);
  }
}

@keyframes animation-1 {
  0%, 71% {
    -webkit-clip-path: polygon(0% 0%, 0% 78.5%, 100% 34.5%, 100% -30%);
    clip-path: polygon(0% 0%, 0% 78.5%, 100% 34.5%, 100% -30%);
  }

  96%, 100% {
    -webkit-clip-path: polygon(0% 0%, 0% 140%, 100% 96%, 100% -30%);
    clip-path: polygon(0% 0%, 0% 140%, 100% 96%, 100% -30%);
  }
}

@keyframes animation-2 {
  100% {
    stroke-dashoffset: 0;
  }
}

.emotion-0 {
  -webkit-animation: animation-0 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  animation: animation-0 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  will-change: clip-path;
}

.emotion-1 {
  -webkit-clip-path: polygon(-0.1% -10%, 169% 65%, -0.1% 139%);
  clip-path: polygon(-0.1% -10%, 169% 65%, -0.1% 139%);
  -webkit-animation: animation-1 cubic-bezier(0, 0, 0.85, 1) 2s infinite alternate;
  animation: animation-1 cubic-bezier(0, 0, 0.85, 1) 2s infinite alternate;
  will-change: clip-path;
}

.emotion-2 {
  display: block;
  stroke: #FFFFFF;
}

.emotion-3 {
  -webkit-animation: animation-2 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  animation: animation-2 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  stroke-dasharray: 9800;
  stroke-dashoffset: 9800;
  will-change: stroke-dashoffset;
}

<div
  class="emotion-0"
  data-testid="loader-wrapper"
>
  <div
    class="emotion-1"
  >
    <svg
      class="emotion-2"
      viewBox="0 0 2640 3444"
    >
      <path
        class="emotion-3"
        d="M0 0 M2569 1056L143 2447V149l1175 673v1867l1248 715"
        fill="none"
        stroke-linejoin="round"
        stroke-width="300"
      />
    </svg>
  </div>
</div>
`;
